# therapy-wiki

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml  therapy
schema/: cli.md  setup.md  wiki-maintainer.md
schema/personas/: close-friend.md  intp-lens.md  psychologist.md  supervisor.md  therapist.md
schema/report-templates/: longitudinal-report.md  session-report.md
scripts/: install_skills.py
skills/therapy-close-friend/: SKILL.md
skills/therapy-close-friend/agents/: openai.yaml
skills/therapy-discuss/: SKILL.md
skills/therapy-discuss/agents/: openai.yaml
skills/therapy-ingest/: SKILL.md
skills/therapy-ingest/agents/: openai.yaml
skills/therapy-intp-lens/: SKILL.md
skills/therapy-intp-lens/agents/: openai.yaml
skills/therapy-psychologist/: SKILL.md
skills/therapy-psychologist/agents/: openai.yaml
skills/therapy-report/: SKILL.md
skills/therapy-report/agents/: openai.yaml
skills/therapy-supervisor/: SKILL.md
skills/therapy-supervisor/agents/: openai.yaml
skills/therapy-therapist/: SKILL.md
skills/therapy-therapist/agents/: openai.yaml
src/therapy_wiki/: __init__.py  audio.py  cli.py  commands.py  constants.py  diarize.py  exceptions.py  frontmatter.py  linting.py  mlx_worker.py  models.py  paths.py  reporting.py  repository.py  runtime_log.py  speaker_map.py  stt.py  summarize.py  taxonomy.py  utils.py  wiki.py
tests/: test_diarize.py  test_stt.py  test_workflow.py
